# LiveScribe

./: .gitignore  LiveScribe-implementation-plan.md  README.md  README_en.md  config.example.yaml  main.py  pyproject.toml  requirements.txt  run-download-vad.bat  run-list-devices.bat  run.bat  setup-env.bat  test_env.py
.trae/documents/: LiveScribe-implementation-plan.md
livescribe/: __init__.py  __main__.py  exceptions.py  logging_utils.py  pipeline.py
livescribe/asr/: base.py  factory.py  faster_whisper_engine.py  qwen3_transformers_engine.py  qwen3_vllm_engine.py
livescribe/audio/: capture.py  device.py  resampler.py
livescribe/config/: loader.py  schema.py
livescribe/vad/: detector.py  download.py
