[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "livescribe"
version = "0.1.0"
description = "Real-time Windows speech-to-text system capturing system audio via WASAPI loopback"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "faster-whisper>=1.2.0",
    "qwen-asr>=0.0.6",
    "transformers>=4.50.0",
    "accelerate>=1.0.0",
    "SoundCard>=0.4.6",
    "soundfile>=0.13.0",
    "librosa>=0.11.0",
    "soxr>=0.5.0",
    "onnxruntime>=1.20.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "ctranslate2>=4.5.0",
]

[project.scripts]
livescribe = "livescribe.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
include = ["livescribe*"]
exclude = ["tests*", "models*", "output*", "logs*"]

[tool.setuptools.package-data]
livescribe = ["py.typed"]
